Modified login form UI and structure

--- a/pages/login form.html
+++ b/pages/login form.html
@@ -34,7 +34,7 @@
         <input class="mt-3" type="text" placeholder="username" id ="username" autofocus><br><br>
         <p id = "msg"></p>
 
-        <input type="text number" placeholder="Password" id="password"><br>
+        <input type="password" placeholder="Password" id="password"><br>
         <p id = "msg2"></p>
 
         <p style="text-align: right; font-weight:bold;" class="mt-3">Forget password</p>
