--- a/pages/login form.html
+++ b/pages/login form.html
@@ -13,20 +13,22 @@
 </head>
     <body>
     <header>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href=""></a>
-        <button class="navbar-toggler" type="button"><span class="navbar-toggler-icon" data-bs-toggle="collapse"
-            data-bs-target="#navbar"></span></button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav ms-auto">
-            <a href="#" ><img src="../images/home.svg" alt="Home" width="20" height="40"> <li class="navbar-item"><a class="nav-link" href="../index.html" target="_self">HOME</a></a></li>
-            <a href="#" ><img src="../images/login.svg" alt="Home" width="20" height="40"> <li class="navbar-item"><a class="nav-link active" href="#">LOGIN</a></li></a>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"></a>
+      <ul class="navbar-nav d-flex flex-row ms-auto gap-4 align-items-center">
+        <li class="nav-item d-flex align-items-center">
+          <img src="../images/home.svg" alt="Home" width="20" height="40" class="me-1">
+          <a class="nav-link text-white" href="../index.html">HOME</a>
+        </li>
+        <li class="nav-item d-flex align-items-center">
+          <img src="../images/login.svg" alt="Login" width="20" height="40" class="me-1">
+          <a class="nav-link text-white active" href="#">LOGIN</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 
     <div class="box">
         <h2 style="text-align: center; font-weight: bold;">Login</h2>
