--- a/pages/registration.html
+++ b/pages/registration.html
@@ -13,22 +13,22 @@
     <script src="../js/registration.js" defer></script>
 </head>
 <body onload="document.registration.user.focus();">
-    <header>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href=""></a>
-        <button class="navbar-toggler" type="button"><span class="navbar-toggler-icon" data-bs-toggle="collapse"
-            data-bs-target="#navbar"></span></button>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav ms-auto">
-            <a href="#" ><img src="../images/home.svg" alt="Home" width="20" height="40"> <li class="navbar-item"><a class="nav-link" href="../index.html">HOME</a></li></a>
-            <a href="#" ><img src="../images/login.svg" alt="Home" width="20" height="40"> <li class="navbar-item"><a class="nav-link active" href="./login form.html">LOGIN</a></li></a>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"></a>
+      <ul class="navbar-nav d-flex flex-row ms-auto gap-4 align-items-center">
+        <li class="nav-item d-flex align-items-center">
+          <img src="../images/home.svg" alt="Home" width="20" height="40" class="me-1">
+          <a class="nav-link text-white" href="../index.html">HOME</a>
+        </li>
+        <li class="nav-item d-flex align-items-center">
+          <img src="../images/login.svg" alt="Login" width="20" height="40" class="me-1">
+          <a class="nav-link text-white active" href="../pages/login form.html">LOGIN</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
    <div class = "card">
     <h3>Registration</h3>
     <div class = "card-body">
