updated index and logged

--- a/pages/logged in.html
+++ b/pages/logged in.html
@@ -30,7 +30,7 @@
             <a href="#"><img src="../images/menu.svg" alt="menu" width="20" height="40" ></a><li class="navbar-item"><a class="nav-link" href="#menu" target="_self">MENU</a></li>
             <a href="#"><img src="../images/our story.svg" alt="our story" width="20" height="40"><li class="navbar-item"><a class="nav-link" href="#our story" target="_self">OUR STORY</a></a></li>
             <a href="#"><img src="../images/contact.svg" alt="contact" width="20" height="40"><li class="navbar-item"><a class="nav-link" href="#contact" target="_self">CONTACT US</a></a></li>
-            <img src="../images/login.svg" alt="login" width="20" height="80"><li class="navbar-item"><a class="nav-link">LOGGED IN</a></li>
+            <a ><img src="../images/login.svg" alt="login" width="20" height="40"><li class="navbar-item"><a class="nav-link">LOGGED IN</a></a></li>
            <a href="#"><img src="../images/cart.svg" alt="cart" width="20" height="40"><li class="navbar-item"><a class="nav-link" id="open-cart" href="#card-sidebar" target="_self">CART (<span id="cart-count">0</span>)</a></a></li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
       <div class="col-md-6 text-center text-md-start">
         <h1 class="fw-bold">Italian Food</h1>
         <p class="fs-5">Traditional & Authentic</p>
-        <a href="#story"><button class="btn btn-primary mt-3">Read More</button></a>
+        <a href="#our story"><button class="btn btn-primary mt-3">Read More</button></a>
         <p class="description mt-4">
           Experience the rich and vibrant flavors of authentic Italian cuisine.
           Our pasta is made with the finest durum wheat, cooked to perfection.
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <button class="btn btn-primary mt-4">SHOW MORE</button>
+    <a href="#our story"><button class="btn btn-primary mt-4">SHOW MORE</button></a>
   </div>
  <!-- add to cart  -->
   <div id = "menu"><h2 class="text-center">MENU</h2>
