--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="col-md-6 text-center text-md-start">
         <h1 class="fw-bold">Italian Food</h1>
         <p class="fs-5">Traditional & Authentic</p>
-        <a href="#story"><button class="btn btn-primary mt-3">Read More</button></a>
+        <a href="#our story"><button class="btn btn-primary mt-3">Read More</button></a>
         <p class="description mt-4">
           Experience the rich and vibrant flavors of authentic Italian cuisine.
           Our pasta is made with the finest durum wheat, cooked to perfection.
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <button class="btn btn-primary mt-4">SHOW MORE</button>
+    <a href="#our story"><button class="btn btn-primary mt-4">SHOW MORE</button></a>
   </div>
  <!-- add to cart  -->
   <div id = "menu"><h2 class="text-center">MENU</h2>
